[FIX] Role 체크 추가